--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+    />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -54,7 +57,11 @@
             <div class="header__body-inner">
               <div class="header__main">
                 <div class="header__content">
-                  <a class="header__play-btn" href="https://www.youtube.com/watch?v=qMO7xGP5clU" data-fancybox>
+                  <a
+                    class="header__play-btn"
+                    href="https://www.youtube.com/watch?v=qMO7xGP5clU"
+                    data-fancybox
+                  >
                     <svg
                       width="52"
                       height="52"
@@ -141,11 +148,11 @@
                     </a>
                   </div>
                 </div>
-                <img src="images/about-image.svg" alt="About image"/>
+                <img src="images/about-image.svg" alt="About image" />
               </div>
               <div class="about__values">
                 <div class="about__image-box">
-                  <img src="images/numbers-image.jpg" alt="Numbers images">
+                  <img src="images/numbers-image.jpg" alt="Numbers images" />
                 </div>
                 <ul class="about__numbers">
                   <li class="about__number">
@@ -169,11 +176,142 @@
             </div>
           </div>
         </section>
+        <section class="directions">
+          <div class="container">
+            <div class="directions__inner">
+              <div class="directions__heading heading__text--center heading">
+                <p class="heading__subtitle">our main directions</p>
+                <h2 class="heading__title ">What do we teach</h2>
+              </div>
+              <div class="directions__body">
+                <ul class="directions__filter-box">
+                  <li class="directions__filter-item">
+                    <button class="directions__filter-btn directions__filter-btn--active tag" type="button" data-filter="all">
+                      All
+                    </button>
+                  </li>
+                  <li class="directions__filter-item">
+                    <button class="directions__filter-btn tag" type="button" data-filter=".directions__list-item--marketing">
+                      Marketing
+                    </button>
+                  </li>
+                  <li class="directions__filter-item">
+                    <button class="directions__filter-btn tag" type="button" data-filter=".directions__list-item--management">
+                      Management
+                    </button>
+                  </li>
+                  <li class="directions__filter-item">
+                    <button class="directions__filter-btn tag" type="button" data-filter=".directions__list-item--hr">
+                      HR & Recruting
+                    </button>
+                  </li>
+                  <li class="directions__filter-item">
+                    <button class="directions__filter-btn tag" type="button" data-filter=".directions__list-item--design">Design</button>
+                  </li>
+                  <li class="directions__filter-item">
+                    <button class="directions__filter-btn tag" type="button" data-filter=".directions__list-item--development">
+                      Development
+                    </button>
+                  </li>
+                </ul>
+                <ul class="directions__list">
+                  <li class="mix directions__list-item directions__list-item--marketing" data-order="1">
+                    <a href="#" class="directins__list-link">
+                      <div class="directins__image-box">
+                        <img src="/images/directions/1.jpg" alt="" />
+                      </div>
+                      <div class="directins__link-content">
+                        <div class="directins__link-tag tag">Marketing</div>
+                        <p class="directins__link-text">
+                          Odio posuere netus quisque faucibus lectus arcu donec.
+                          Eget dictum eu viverra faucibus. Viverra scelerisque
+                          consequat.
+                        </p>
+                        <div class="directins__link-btn">Check courses</div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="mix directions__list-item directions__list-item--management" data-order="2">
+                    <a href="#" class="directins__list-link">
+                      <div class="directins__image-box">
+                        <img src="/images/directions/2.jpg" alt="" />
+                      </div>
+                      <div class="directins__link-content">
+                        <div class="directins__link-tag tag">Management</div>
+                        <p class="directins__link-text">
+                          Odio posuere netus quisque faucibus lectus arcu donec.
+                          Eget dictum eu viverra faucibus. Viverra scelerisque
+                          consequat.
+                        </p>
+                        <div class="directins__link-btn">Check courses</div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="mix directions__list-item directions__list-item--hr" data-order="3">
+                    <a href="#" class="directins__list-link">
+                      <div class="directins__image-box">
+                        <img src="/images/directions/3.jpg" alt="" />
+                      </div>
+                      <div class="directins__link-content">
+                        <div class="directins__link-tag tag">
+                          HR & Recruting
+                        </div>
+                        <p class="directins__link-text">
+                          Odio posuere netus quisque faucibus lectus arcu donec.
+                          Eget dictum eu viverra faucibus. Viverra scelerisque
+                          consequat.
+                        </p>
+                        <div class="directins__link-btn">Check courses</div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="mix directions__list-item directions__list-item--design" data-order="4">
+                    <a href="#" class="directins__list-link">
+                      <div class="directins__image-box">
+                        <img src="/images/directions/4.jpg" alt="" />
+                      </div>
+                      <div class="directins__link-content">
+                        <div class="directins__link-tag tag">Design</div>
+                        <p class="directins__link-text">
+                          Odio posuere netus quisque faucibus lectus arcu donec.
+                          Eget dictum eu viverra faucibus. Viverra scelerisque
+                          consequat.
+                        </p>
+                        <div class="directins__link-btn">Check courses</div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="mix directions__list-item directions__list-item--development" data-order="5">
+                    <a href="#" class="directins__list-link">
+                      <div class="directins__image-box">
+                        <img src="/images/directions/5.jpg" alt="" />
+                      </div>
+                      <div class="directins__link-content">
+                        <div class="directins__link-tag tag">Development</div>
+                        <p class="directins__link-text">
+                          Odio posuere netus quisque faucibus lectus arcu donec.
+                          Eget dictum eu viverra faucibus. Viverra scelerisque
+                          consequat.
+                        </p>
+                        <div class="directins__link-btn">Check courses</div>
+                      </div>
+                    </a>
+                  </li>
+                  <li
+                    class="mix directions__list-item directions__list-item--empty" data-order="6"
+                  >
+                    <span> New studying program coming soon...</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/mixitup.min.js"></script>  
+  <script src="js/mixitup.min.js"></script>
 </html>
