--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                   <li class="mix directions__list-item directions__list-item--marketing" data-order="1">
                     <a href="#" class="directins__list-link">
                       <div class="directins__image-box">
-                        <img src="/images/directions/1.jpg" alt="" />
+                        <img src="images/directions/1.jpg" alt="" />
                       </div>
                       <div class="directins__link-content">
                         <div class="directins__link-tag tag">Marketing</div>
@@ -234,7 +234,7 @@
                   <li class="mix directions__list-item directions__list-item--management" data-order="2">
                     <a href="#" class="directins__list-link">
                       <div class="directins__image-box">
-                        <img src="/images/directions/2.jpg" alt="" />
+                        <img src="images/directions/2.jpg" alt="" />
                       </div>
                       <div class="directins__link-content">
                         <div class="directins__link-tag tag">Management</div>
@@ -250,7 +250,7 @@
                   <li class="mix directions__list-item directions__list-item--hr" data-order="3">
                     <a href="#" class="directins__list-link">
                       <div class="directins__image-box">
-                        <img src="/images/directions/3.jpg" alt="" />
+                        <img src="images/directions/3.jpg" alt="" />
                       </div>
                       <div class="directins__link-content">
                         <div class="directins__link-tag tag">
@@ -268,7 +268,7 @@
                   <li class="mix directions__list-item directions__list-item--design" data-order="4">
                     <a href="#" class="directins__list-link">
                       <div class="directins__image-box">
-                        <img src="/images/directions/4.jpg" alt="" />
+                        <img src="images/directions/4.jpg" alt="" />
                       </div>
                       <div class="directins__link-content">
                         <div class="directins__link-tag tag">Design</div>
@@ -284,7 +284,7 @@
                   <li class="mix directions__list-item directions__list-item--development" data-order="5">
                     <a href="#" class="directins__list-link">
                       <div class="directins__image-box">
-                        <img src="/images/directions/5.jpg" alt="" />
+                        <img src="images/directions/5.jpg" alt="" />
                       </div>
                       <div class="directins__link-content">
                         <div class="directins__link-tag tag">Development</div>
