--- a/index.html
+++ b/index.html
@@ -1077,11 +1077,15 @@
                       </blockquote>
                       <div class="testimonials__user">
                         <div class="testimonials__avatar">
-                          <img src="images/avatar.jpg" alt="">
+                          <img src="images/avatar.jpg" alt="" />
                         </div>
                         <div class="testimonials__user-info">
-                          <div class="testimonials__user-name">Eleanor Pena</div>
-                          <div class="testimonials__user-position">Position, Course</div>
+                          <div class="testimonials__user-name">
+                            Eleanor Pena
+                          </div>
+                          <div class="testimonials__user-position">
+                            Position, Course
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -1098,11 +1102,15 @@
                       </blockquote>
                       <div class="testimonials__user">
                         <div class="testimonials__avatar">
-                          <img src="images/avatar.jpg" alt="">
+                          <img src="images/avatar.jpg" alt="" />
                         </div>
                         <div class="testimonials__user-info">
-                          <div class="testimonials__user-name">Eleanor Pena</div>
-                          <div class="testimonials__user-position">Position, Course</div>
+                          <div class="testimonials__user-name">
+                            Eleanor Pena
+                          </div>
+                          <div class="testimonials__user-position">
+                            Position, Course
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -1119,11 +1127,15 @@
                       </blockquote>
                       <div class="testimonials__user">
                         <div class="testimonials__avatar">
-                          <img src="images/avatar.jpg" alt="">
+                          <img src="images/avatar.jpg" alt="" />
                         </div>
                         <div class="testimonials__user-info">
-                          <div class="testimonials__user-name">Eleanor Pena</div>
-                          <div class="testimonials__user-position">Position, Course</div>
+                          <div class="testimonials__user-name">
+                            Eleanor Pena
+                          </div>
+                          <div class="testimonials__user-position">
+                            Position, Course
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -1140,11 +1152,15 @@
                       </blockquote>
                       <div class="testimonials__user">
                         <div class="testimonials__avatar">
-                          <img src="images/avatar.jpg" alt="">
+                          <img src="images/avatar.jpg" alt="" />
                         </div>
                         <div class="testimonials__user-info">
-                          <div class="testimonials__user-name">Eleanor Pena</div>
-                          <div class="testimonials__user-position">Position, Course</div>
+                          <div class="testimonials__user-name">
+                            Eleanor Pena
+                          </div>
+                          <div class="testimonials__user-position">
+                            Position, Course
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -1161,29 +1177,271 @@
                       </blockquote>
                       <div class="testimonials__user">
                         <div class="testimonials__avatar">
-                          <img src="images/avatar.jpg" alt="">
+                          <img src="images/avatar.jpg" alt="" />
                         </div>
                         <div class="testimonials__user-info">
-                          <div class="testimonials__user-name">Eleanor Pena</div>
-                          <div class="testimonials__user-position">Position, Course</div>
+                          <div class="testimonials__user-name">
+                            Eleanor Pena
+                          </div>
+                          <div class="testimonials__user-position">
+                            Position, Course
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <a href="#" class="testimonials__arrow testimonials__arrow-prev">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M9.20711 17.2071C8.81658 17.5976 8.18342 17.5976 7.79289 17.2071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929L7.79289 6.79289C8.18342 6.40237 8.81658 6.40237 9.20711 6.79289C9.59763 7.18342 9.59763 7.81658 9.20711 8.20711L6.41421 11L20 11C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13L6.41421 13L9.20711 15.7929C9.59763 16.1834 9.59763 16.8166 9.20711 17.2071Z" fill="#424551"/>
+                <a
+                  href="#"
+                  class="testimonials__arrow testimonials__arrow-prev"
+                >
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M9.20711 17.2071C8.81658 17.5976 8.18342 17.5976 7.79289 17.2071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929L7.79289 6.79289C8.18342 6.40237 8.81658 6.40237 9.20711 6.79289C9.59763 7.18342 9.59763 7.81658 9.20711 8.20711L6.41421 11L20 11C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13L6.41421 13L9.20711 15.7929C9.59763 16.1834 9.59763 16.8166 9.20711 17.2071Z"
+                      fill="#424551"
+                    />
                   </svg>
                 </a>
-                <a href="#" class="testimonials__arrow testimonials__arrow-next">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M14.7929 6.79289C15.1834 6.40237 15.8166 6.40237 16.2071 6.79289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071L16.2071 17.2071C15.8166 17.5976 15.1834 17.5976 14.7929 17.2071C14.4024 16.8166 14.4024 16.1834 14.7929 15.7929L17.5858 13H4C3.44772 13 3 12.5523 3 12C3 11.4477 3.44772 11 4 11H17.5858L14.7929 8.20711C14.4024 7.81658 14.4024 7.18342 14.7929 6.79289Z" fill="#424551"/>
+                <a
+                  href="#"
+                  class="testimonials__arrow testimonials__arrow-next"
+                >
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M14.7929 6.79289C15.1834 6.40237 15.8166 6.40237 16.2071 6.79289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071L16.2071 17.2071C15.8166 17.5976 15.1834 17.5976 14.7929 17.2071C14.4024 16.8166 14.4024 16.1834 14.7929 15.7929L17.5858 13H4C3.44772 13 3 12.5523 3 12C3 11.4477 3.44772 11 4 11H17.5858L14.7929 8.20711C14.4024 7.81658 14.4024 7.18342 14.7929 6.79289Z"
+                      fill="#424551"
+                    />
                   </svg>
-                    
                 </a>
               </div>
               <div class="testimonials__dots"></div>
+            </div>
+          </div>
+        </section>
+        <section class="main__companies companies">
+          <div class="container">
+            <div class="companies__inner">
+              <div class="companies__heading heading__text--center heading">
+                <p class="heading__subtitle">best jobs for you</p>
+                <h2 class="heading__title">Our students work here</h2>
+              </div>
+              <ul class="companies__grid">
+                <li class="companies__grid-item">
+                  <a href="" class="companies__grid-link">
+                    <img src="images/logos/logo-11.svg" alt="" />
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a href="" class="companies__grid-link">
+                    <img src="images/logos/logo-11.svg" alt="" />
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a href="" class="companies__grid-link">
+                    <img src="images/logos/logo-11.svg" alt="" />
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a href="" class="companies__grid-link">
+                    <img src="images/logos/logo-11.svg" alt="" />
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a href="" class="companies__grid-link">
+                    <img src="images/logos/logo-11.svg" alt="" />
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a href="" class="companies__grid-link">
+                    <img src="images/logos/logo-11.svg" alt="" />
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a href="" class="companies__grid-link">
+                    <img src="images/logos/logo-11.svg" alt="" />
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a href="" class="companies__grid-link">
+                    <img src="images/logos/logo-11.svg" alt="" />
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a href="" class="companies__grid-link">
+                    <img src="images/logos/logo-11.svg" alt="" />
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a href="" class="companies__grid-link">
+                    <img src="images/logos/logo-11.svg" alt="" />
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a href="" class="companies__grid-link">
+                    <img src="images/logos/logo-11.svg" alt="" />
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a href="" class="companies__grid-link">
+                    <img src="images/logos/logo-11.svg" alt="" />
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="main__program program">
+          <div class="container">
+            <div class="program__inner">
+              <div class="program__content">
+                <div class="program__heading heading">
+                  <p class="heading__subtitle">Course program</p>
+                  <h2 class="heading__title">What will you learn</h2>
+                </div>
+                <ul class="program__acc">
+                  <li class="program__acc-item">
+                    <a href="#" class="program__acc-link">
+                      <div class="program__acc-head">
+                        <span>Lesson 1.</span> Aliquet lectus urna viverra in
+                        odio.
+                      </div>
+                      <p class="program__acc-text" style="display: none">
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
+                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        curabitur turpis varius mauris. Nisi, tempus risus, odio
+                        mi suscipit sed. Curabitur faucibus porttitor quis sem
+                        lacus, arcu feugiat facilisis. Commodo nunc orci vitae
+                        accumsan id.
+                      </p>
+                    </a>
+                  </li>
+                  <li class="program__acc-item">
+                    <a href="#" class="program__acc-link">
+                      <div class="program__acc-head">
+                        <span>Lesson 2.</span> Orci commodo, viverra orci mollis ut euismod.
+                        odio.
+                      </div>
+                      <p class="program__acc-text" style="display: none">
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
+                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        curabitur turpis varius mauris. Nisi, tempus risus, odio
+                        mi suscipit sed. Curabitur faucibus porttitor quis sem
+                        lacus, arcu feugiat facilisis. Commodo nunc orci vitae
+                        accumsan id.
+                      </p>
+                    </a>
+                  </li>
+                  <li class="program__acc-item">
+                    <a href="#" class="program__acc-link">
+                      <div class="program__acc-head">
+                        <span>Lesson 3.</span> Sagittis vitae facilisi rutrum amet mauris quisque vel.
+                      </div>
+                      <p class="program__acc-text" style="display: none">
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
+                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        curabitur turpis varius mauris. Nisi, tempus risus, odio
+                        mi suscipit sed. Curabitur faucibus porttitor quis sem
+                        lacus, arcu feugiat facilisis. Commodo nunc orci vitae
+                        accumsan id.
+                      </p>
+                    </a>
+                  </li>
+                  <li class="program__acc-item">
+                    <a href="#" class="program__acc-link">
+                      <div class="program__acc-head ">
+                        <span>Lesson 4.</span> In id dolor quis nunc, urna hendrerit pharetra.
+                      </div>
+                      <p class="program__acc-text" style="display: none">
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
+                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        curabitur turpis varius mauris. Nisi, tempus risus, odio
+                        mi suscipit sed. Curabitur faucibus porttitor quis sem
+                        lacus, arcu feugiat facilisis. Commodo nunc orci vitae
+                        accumsan id.
+                      </p>
+                    </a>
+                  </li>
+                  <li class="program__acc-item">
+                    <a href="#" class="program__acc-link">
+                      <div class="program__acc-head ">
+                        <span>Lesson 5.</span> Est, ut tempus id rutrum facilisi.
+                      </div>
+                      <p class="program__acc-text" style="display: none">
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
+                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        curabitur turpis varius mauris. Nisi, tempus risus, odio
+                        mi suscipit sed. Curabitur faucibus porttitor quis sem
+                        lacus, arcu feugiat facilisis. Commodo nunc orci vitae
+                        accumsan id.
+                      </p>
+                    </a>
+                  </li>
+                  <li class="program__acc-item">
+                    <a href="#" class="program__acc-link">
+                      <div class="program__acc-head ">
+                        <span>Lesson 6.</span> Amet nec in pellentesque.
+                      </div>
+                      <p class="program__acc-text" style="display: none">
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
+                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        curabitur turpis varius mauris. Nisi, tempus risus, odio
+                        mi suscipit sed. Curabitur faucibus porttitor quis sem
+                        lacus, arcu feugiat facilisis. Commodo nunc orci vitae
+                        accumsan id.
+                      </p>
+                    </a>
+                  </li>
+                  <li class="program__acc-item">
+                    <a href="#" class="program__acc-link">
+                      <div class="program__acc-head ">
+                        <span>Lesson 7.</span> Massa vel arcu mauris, id vel rhoncus mattis quis.
+                      </div>
+                      <p class="program__acc-text" style="display: none">
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
+                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        curabitur turpis varius mauris. Nisi, tempus risus, odio
+                        mi suscipit sed. Curabitur faucibus porttitor quis sem
+                        lacus, arcu feugiat facilisis. Commodo nunc orci vitae
+                        accumsan id.
+                      </p>
+                    </a>
+                  </li>
+                  <li class="program__acc-item">
+                    <a href="#" class="program__acc-link">
+                      <div class="program__acc-head ">
+                        <span>Lesson 8.</span> Neque, cursus sapien nullam id.
+                      </div>
+                      <p class="program__acc-text" style="display: none">
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
+                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        curabitur turpis varius mauris. Nisi, tempus risus, odio
+                        mi suscipit sed. Curabitur faucibus porttitor quis sem
+                        lacus, arcu feugiat facilisis. Commodo nunc orci vitae
+                        accumsan id.
+                      </p>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="program__image">
+                <img src="images/program-img.svg" alt="" />
+              </div>
             </div>
           </div>
         </section>
