--- a/index.html
+++ b/index.html
@@ -1322,8 +1322,8 @@
                         odio.
                       </div>
                       <p class="program__acc-text" style="display: none">
-                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
-                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus
+                        nec pulvinar aliquet donec enim, ornare. Lacus facilisi
                         curabitur turpis varius mauris. Nisi, tempus risus, odio
                         mi suscipit sed. Curabitur faucibus porttitor quis sem
                         lacus, arcu feugiat facilisis. Commodo nunc orci vitae
@@ -1334,12 +1334,12 @@
                   <li class="program__acc-item">
                     <a href="#" class="program__acc-link">
                       <div class="program__acc-head">
-                        <span>Lesson 2.</span> Orci commodo, viverra orci mollis ut euismod.
-                        odio.
+                        <span>Lesson 2.</span> Orci commodo, viverra orci mollis
+                        ut euismod. odio.
                       </div>
                       <p class="program__acc-text" style="display: none">
-                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
-                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus
+                        nec pulvinar aliquet donec enim, ornare. Lacus facilisi
                         curabitur turpis varius mauris. Nisi, tempus risus, odio
                         mi suscipit sed. Curabitur faucibus porttitor quis sem
                         lacus, arcu feugiat facilisis. Commodo nunc orci vitae
@@ -1350,11 +1350,12 @@
                   <li class="program__acc-item">
                     <a href="#" class="program__acc-link">
                       <div class="program__acc-head">
-                        <span>Lesson 3.</span> Sagittis vitae facilisi rutrum amet mauris quisque vel.
+                        <span>Lesson 3.</span> Sagittis vitae facilisi rutrum
+                        amet mauris quisque vel.
                       </div>
                       <p class="program__acc-text" style="display: none">
-                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
-                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus
+                        nec pulvinar aliquet donec enim, ornare. Lacus facilisi
                         curabitur turpis varius mauris. Nisi, tempus risus, odio
                         mi suscipit sed. Curabitur faucibus porttitor quis sem
                         lacus, arcu feugiat facilisis. Commodo nunc orci vitae
@@ -1364,12 +1365,13 @@
                   </li>
                   <li class="program__acc-item">
                     <a href="#" class="program__acc-link">
-                      <div class="program__acc-head ">
-                        <span>Lesson 4.</span> In id dolor quis nunc, urna hendrerit pharetra.
+                      <div class="program__acc-head">
+                        <span>Lesson 4.</span> In id dolor quis nunc, urna
+                        hendrerit pharetra.
                       </div>
                       <p class="program__acc-text" style="display: none">
-                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
-                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus
+                        nec pulvinar aliquet donec enim, ornare. Lacus facilisi
                         curabitur turpis varius mauris. Nisi, tempus risus, odio
                         mi suscipit sed. Curabitur faucibus porttitor quis sem
                         lacus, arcu feugiat facilisis. Commodo nunc orci vitae
@@ -1379,12 +1381,13 @@
                   </li>
                   <li class="program__acc-item">
                     <a href="#" class="program__acc-link">
-                      <div class="program__acc-head ">
-                        <span>Lesson 5.</span> Est, ut tempus id rutrum facilisi.
+                      <div class="program__acc-head">
+                        <span>Lesson 5.</span> Est, ut tempus id rutrum
+                        facilisi.
                       </div>
                       <p class="program__acc-text" style="display: none">
-                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
-                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus
+                        nec pulvinar aliquet donec enim, ornare. Lacus facilisi
                         curabitur turpis varius mauris. Nisi, tempus risus, odio
                         mi suscipit sed. Curabitur faucibus porttitor quis sem
                         lacus, arcu feugiat facilisis. Commodo nunc orci vitae
@@ -1394,12 +1397,12 @@
                   </li>
                   <li class="program__acc-item">
                     <a href="#" class="program__acc-link">
-                      <div class="program__acc-head ">
+                      <div class="program__acc-head">
                         <span>Lesson 6.</span> Amet nec in pellentesque.
                       </div>
                       <p class="program__acc-text" style="display: none">
-                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
-                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus
+                        nec pulvinar aliquet donec enim, ornare. Lacus facilisi
                         curabitur turpis varius mauris. Nisi, tempus risus, odio
                         mi suscipit sed. Curabitur faucibus porttitor quis sem
                         lacus, arcu feugiat facilisis. Commodo nunc orci vitae
@@ -1409,12 +1412,13 @@
                   </li>
                   <li class="program__acc-item">
                     <a href="#" class="program__acc-link">
-                      <div class="program__acc-head ">
-                        <span>Lesson 7.</span> Massa vel arcu mauris, id vel rhoncus mattis quis.
+                      <div class="program__acc-head">
+                        <span>Lesson 7.</span> Massa vel arcu mauris, id vel
+                        rhoncus mattis quis.
                       </div>
                       <p class="program__acc-text" style="display: none">
-                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
-                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus
+                        nec pulvinar aliquet donec enim, ornare. Lacus facilisi
                         curabitur turpis varius mauris. Nisi, tempus risus, odio
                         mi suscipit sed. Curabitur faucibus porttitor quis sem
                         lacus, arcu feugiat facilisis. Commodo nunc orci vitae
@@ -1424,12 +1428,12 @@
                   </li>
                   <li class="program__acc-item">
                     <a href="#" class="program__acc-link">
-                      <div class="program__acc-head ">
+                      <div class="program__acc-head">
                         <span>Lesson 8.</span> Neque, cursus sapien nullam id.
                       </div>
                       <p class="program__acc-text" style="display: none">
-                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec
-                        pulvinar aliquet donec enim, ornare. Lacus facilisi
+                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus
+                        nec pulvinar aliquet donec enim, ornare. Lacus facilisi
                         curabitur turpis varius mauris. Nisi, tempus risus, odio
                         mi suscipit sed. Curabitur faucibus porttitor quis sem
                         lacus, arcu feugiat facilisis. Commodo nunc orci vitae
@@ -1442,6 +1446,114 @@
               <div class="program__image">
                 <img src="images/program-img.svg" alt="" />
               </div>
+            </div>
+          </div>
+        </section>
+        <section class="main__blog blog">
+          <div class="container">
+            <div class="blog__inner">
+              <div class="blog__header">
+                <div class="blog__heading heading">
+                  <p class="heading__subtitle">Our blog</p>
+                  <h2 class="heading__title">Latest posts</h2>
+                </div>
+                <a href="#" class="blog__btn button">Go to blog</a>
+              </div>
+              <ul class="blog__row">
+                <li class="blog__item blog__item-podcast">
+                  <a href="#" class="blog__link">
+                    <article class="blog_item-inner">
+                      <div class="blog__image-box">
+                        <img
+                          class="blog__item-image"
+                          src="images/blog/1.jpg"
+                          alt=""
+                        />
+                        <span class="blog__item-type">Podcast</span>
+                      </div>
+                      <div class="blog__item-content">
+                        <div class="blog__item-info">
+                          <div class="blog__category blog__el">Marketing</div>
+                          <time class="blog__date blog__el"
+                            >September 4, 2020</time
+                          >
+                          <div class="blog__time blog__el">36 min</div>
+                        </div>
+                        <h4 class="blog__item-title">
+                          What is traffic arbitrage and does it really make
+                          money?
+                        </h4>
+                        <p class="blog__item-text">
+                          Pharetra, ullamcorper iaculis viverra parturient sed
+                          id sed. Convallis proin dignissim lacus, purus
+                          gravida...
+                        </p>
+                        <div class="blog__item-button">Listen</div>
+                      </div>
+                    </article>
+                  </a>
+                </li>
+                <li class="blog__item blog__item-video">
+                  <a href="#" class="blog__link">
+                    <article class="blog_item-inner">
+                      <div class="blog__image-box">
+                        <img
+                          class="blog__item-image"
+                          src="images/blog/2.jpg"
+                          alt=""
+                        />
+                        <span class="blog__item-type">Video</span>
+                      </div>
+                      <div class="blog__item-content">
+                        <div class="blog__item-info">
+                          <div class="blog__category blog__el">Marketing</div>
+                          <time class="blog__date blog__el"
+                            >August 25, 2020</time
+                          >
+                          <div class="blog__time blog__el">45 min</div>
+                        </div>
+                        <h4 class="blog__item-title">
+                          What to do and who to talk to if you want to get
+                          feedback on the product
+                        </h4>
+                        <p class="blog__item-text">
+                          Neque a, senectus consectetur odio in aliquet nec eu. Ultricies ac nibh urna urna sagittis faucibus...
+                        </p>
+                        <div class="blog__item-button">Watch</div>
+                      </div>
+                    </article>
+                  </a>
+                </li>
+                <li class="blog__item blog__item-article">
+                  <a href="#" class="blog__link">
+                    <article class="blog_item-inner">
+                      <div class="blog__image-box">
+                        <img
+                          class="blog__item-image"
+                          src="images/blog/3.jpg"
+                          alt=""
+                        />
+                        <span class="blog__item-type">Article</span>
+                      </div>
+                      <div class="blog__item-content">
+                        <div class="blog__item-info">
+                          <div class="blog__category blog__el">Design</div>
+                          <time class="blog__date blog__el"
+                            >August 8, 2020</time
+                          >
+                        </div>
+                        <h4 class="blog__item-title">
+                          Should you choose a creative profession if you are attracted to creativity?
+                        </h4>
+                        <p class="blog__item-text">
+                          Curabitur nisl tincidunt eros venenatis vestibulum ac placerat. Tortor, viverra sed vulputate ultrices...
+                        </p>
+                        <div class="blog__item-button">Read</div>
+                      </div>
+                    </article>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </section>
