--- a/index.html
+++ b/index.html
@@ -1642,7 +1642,7 @@
           <div class="container">
             <div class="questions__inner">
               <div class="questions__image">
-                <img src="/images/form-img.svg" alt="">
+                <img src="images/form-img.svg" alt="">
               </div>
               <div class="questions__content">
                 <div class="questions__heading heading">
