--- a/index.html
+++ b/index.html
@@ -1672,7 +1672,7 @@
                     </label>
                   </div>
                   <div class="questions__form-agreement">
-                    <label for="" class="questions__label-checkbox">
+                    <label class="questions__label-checkbox">
                       <div class="questions__checkbox">
                         <input type="checkbox" class="questions__checkbox-default">
                         <span class="questions__checkbox-custom"></span>
