--- a/index.html
+++ b/index.html
@@ -1674,7 +1674,7 @@
                   <div class="questions__form-agreement">
                     <label class="questions__label-checkbox">
                       <div class="questions__checkbox">
-                        <input type="checkbox" class="questions__checkbox-default">
+                        <input type="checkbox" class="questions__checkbox-default" required>
                         <span class="questions__checkbox-custom"></span>
                       </div>
                       I agree to receive communications from Createx Online School
