--- a/index.html
+++ b/index.html
@@ -2042,7 +2042,7 @@
                 <span></span> 
                 by Createx Studio 
               </div>
-              <a href="#" class="footer__bottom-link">GO tO toP</a>
+              <a href="#body" class="footer__bottom-link">GO tO toP</a>
             </div>
           </div>
         </div>
