--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   </head>
   <body id="body">
     <div class="wrapper">
+      <div class="overlay"></div>
       <header class="header" id="header">
+        <div class="burger-menu"><span></span></div>
         <div class="header__top">
           <div class="container">
             <div class="header__top-inner">
