--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="team__slide">
+                <!-- <div class="team__slide">
                   <div class="team__image-box">
                     <div class="team__image">
                       <img src="images/team/1.jpg" alt="" />
@@ -895,8 +895,8 @@
                     <div class="team__name">Jerome Bell</div>
                     <div class="team__post">Founder and Program Director</div>
                   </div>
-                </div>
-                <div class="team__slide">
+                </div> -->
+                <!-- <div class="team__slide">
                   <div class="team__image-box">
                     <div class="team__image">
                       <img src="images/team/3.jpg" alt="" />
@@ -1053,8 +1053,9 @@
                       PM, Curator of Management Course
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
+              <div class="team__dots"></div>
             </div>
           </div>
         </section>
