--- a/index.html
+++ b/index.html
@@ -1942,7 +1942,7 @@
                 </ul>
               </div>
               <div class="footer__top-col">
-                <h3 class="footer__top-title">SitE MaP</h3>
+                <h3 class="footer__top-title footer__top-title--slide">SitE MaP</h3>
                 <ul class="footer__top-list">
                   <li class="footer__top-item">
                     <a href="#about" class="footer__top-link">About Us</a>
@@ -1962,7 +1962,7 @@
                 </ul>
               </div>
               <div class="footer__top-col">
-                <h3 class="footer__top-title">CouRSES</h3>
+                <h3 class="footer__top-title footer__top-title--slide">CouRSES</h3>
                 <ul class="footer__top-list">
                   <li class="footer__top-item">
                     <a href="#directions" class="footer__top-link" data-filter=".directions__list-item--marketing">Marketing</a>
@@ -1982,7 +1982,7 @@
                 </ul>
               </div>
               <div class="footer__top-col">
-                <h3 class="footer__top-title">ConTACT uS</h3>
+                <h3 class="footer__top-title footer__top-title--slide">ConTACT uS</h3>
                 <ul class="footer__top-list">
                   <li class="footer__top-item">                    
                     <a href="tel:4055550128" class="footer__top-link"
